without type module

--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script defer src="js/gallery.js" type="module"></script>
+    <script defer src="js/gallery.js"></script>
   </body>
 </html>
