--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="css/styles.css" />
-  </head>
-  <body>
-    <ul class="gallery"></ul>
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/basicLightbox/5.0.0/basicLightbox.min.js"
@@ -23,6 +20,9 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script defer src="js/gallery.js"></script>
+    <script defer src="js/gallery.js" type="module"></script>
+  </head>
+  <body>
+    <ul class="gallery"></ul>
   </body>
 </html>
