--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script defer src="js/gallery.js" type="module"></script>
+    <script defer src="js/gallery.js"></script>
   </head>
   <body>
     <ul class="gallery"></ul>
