--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
+    <ul class="gallery"></ul>
 
     <script
+      async
       src="https://cdnjs.cloudflare.com/ajax/libs/basicLightbox/5.0.0/basicLightbox.min.js"
       integrity="sha512-jIc3kBeyfyLXBTmzUIXnbGiVK2wgWGcDIkJwkFW4bQ6v2h/piOKLwIfy3wOmKHWIu8DgYSKVth0DMUvExMYcOw=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
     <script defer src="js/gallery.js"></script>
-  </head>
-  <body>
-    <ul class="gallery"></ul>
   </body>
 </html>
