--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script defer src="js/gallery.js"></script>
+    <script src="js/gallery.js"></script>
   </body>
 </html>
